--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+
+build_script:
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 deploy:
   provider: azure_web_apps
   skip_cleanup: true
