--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: java
 build_script:
 - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
+before_deploy: "echo 'ready?'
+
 deploy:
   provider: azure_web_apps
+  verbose: true
   skip_cleanup: true
-  username: azure_deployment_user       # If AZURE_WA_USERNAME isn't set
-  password: azure_deployment_password   # If AZURE_WA_PASSWORD isn't set
-  site: azure_deployment_sitename       # If AZURE_WA_SITE isn't set
-  slot: azure_deployment_slotname       # (optional) If AZURE_WA_SLOT isn't set
+  username: rajeshmukkapati       # If AZURE_WA_USERNAME isn't set
+  password: Chowd2ry   # If AZURE_WA_PASSWORD isn't set
+  site: azure-travis-git       # If AZURE_WA_SITE isn't set
