--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 build_script:
-- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+- mvn install
 
 before_deploy: "echo 'ready?'
 
@@ -12,3 +12,4 @@ deploy:
   username: rajeshmukkapati       # If AZURE_WA_USERNAME isn't set
   password: Chowd2ry   # If AZURE_WA_PASSWORD isn't set
   site: azure-travis-git       # If AZURE_WA_SITE isn't set
+  skip_cleanup: true
