--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ deploy:
   provider: azure_web_apps
   verbose: true
   skip_cleanup: true
-  username: rajeshmukkapati       # If AZURE_WA_USERNAME isn't set
-  password: Chowd2ry   # If AZURE_WA_PASSWORD isn't set
+  username: xxxxxxxx       # If AZURE_WA_USERNAME isn't set
+  password: xxxxxxxx   # If AZURE_WA_PASSWORD isn't set
   site: azure-travis-git       # If AZURE_WA_SITE isn't set
   skip_cleanup: true
