--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ build_script:
 - mvn install
 
 before_deploy: "git remote set-url azure"
-before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
-before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net:433/hello-world-app.git"
+#before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
+#before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net:433/hello-world-app.git"
 
 deploy:
   provider: azure_web_apps
