--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,11 @@ language: java
 build_script:
 - mvn install
 
-before_deploy: "git remote set-url azure"
-#before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
-#before_deploy: "https://rajeshmukkapati@hello-world-app.scm.azurewebsites.net:433/hello-world-app.git"
-
 deploy:
   provider: azure_web_apps
   verbose: true
   skip_cleanup: true
-  username: rajeshmukkapati     # If AZURE_WA_USERNAME isn't set
-  password: firstApp   # If AZURE_WA_PASSWORD isn't set
+  username: azure_deployment_user    # If AZURE_WA_USERNAME isn't set
+  password: azure_deployment_password   # If AZURE_WA_PASSWORD isn't set
   site: hello-world-app       # If AZURE_WA_SITE isn't set
   skip_cleanup: true
