--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: java
 build_script:
 - mvn install
 
-before_deploy: "git remote set-url https://rajeshmukkapati:firstApp@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
-before_deploy: "https://rajeshmukkapati:firstApp@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
+#before_deploy: "git remote set-url https://rajeshmukkapati:firstApp@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
+#before_deploy: "https://rajeshmukkapati:firstApp@hello-world-app.scm.azurewebsites.net/hello-world-app.git"
 
 deploy:
   provider: azure_web_apps
