--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ deploy:
   skip_cleanup: true
   username: rajeshmukkapati
   password: firstApp
-  site: sample-jar-app
+  site: hello-world-app
   skip_cleanup: true
